@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [UPDATE_SYSTEM] Avoid linker errors during pkg upgrades by deactivating harden_rtld during upgrade
 ### Changed
 - [MISC] Some code cleanups and minor fixes
+- [SCRIPTS] Update Redis/Sentinel's announce-ip through redis commands when changing Vulture management IP
 
 
 ## [2.1.7] - 2023-09-12
